# 2025-04-08-rag-ta

./: .gitignore  README.md  pyproject.toml
src/rag_ta/: __init__.py  document_loaders.py  main.py  vector_store.py
