[project]
name = "rag-ta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Spencer Lyon", email = "spencerlyon2@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
rag-ta = "rag_ta:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
